--- a/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
+++ b/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Carrinho";
 }
+@model CasaDoCodigo.Models.ViewModels.CarrinhoViewModel
+
 <h3>Meu Carrinho</h3>
 
 <div class="panel panel-default">
@@ -20,46 +22,37 @@
     </div>
     
     <div class="panel-body">
-        <div class="row">
-            <div class="col-md-3">
-                <img src="~/images/produtos/small_4.jpg" />
-            </div>
-            <div class="col-md-3">Rest</div>
-            <div class="col-md-2">
-                <span class="pull-right">R$70,00</span>
-            </div>
-            <div class="col-md-2">
-                <span class="pull-right">2</span>
-            </div>
-            <div class="col-md-2">
-                <span class="pull-right">R$140,00</span>
-            </div>
-        </div>
-        
-        <div class="row">
-            <div class="col-md-3">
-                <img src="~/images/produtos/small_5.jpg" />
-            </div>
-            <div class="col-md-3">Designers Patterns</div>
-            <div class="col-md-2">
-                <span class="pull-right">R$70,00</span>
-            </div>
-            <div class="col-md-2">
-                <span class="pull-right">2</span>
-            </div>
-            <div class="col-md-2">
-                <span class="pull-right">R$140,00</span>
-            </div>
-        </div>
+        @foreach (var item in Model.Itens)
+        {
+            <div class="row row-center">
+                <div class="col-md-3">
+                    <img src="~/images/produtos/small_@(item.Id).jpg" />
+                </div>
+                <div class="col-md-3">@(item.Produto.Nome)</div>
+                <div class="col-md-2">
+                    <span class="pull-right">R$ @(item.PrecoUnitario) </span>
+                </div>
+                <div class="col-md-2">
+                    <span class="pull-right">@(item.Quantidade)</span>
+                </div>
+                <div class="col-md-2">
+                    <span class="pull-right">R$ @(item.SubTotal)</span>
+                </div>
+            </div>              
+        } 
     </div>
 
     <div class="panel-footer">
         <div class="row">
             <div class="col-md-10">
-                <span class="pull-left">Total</span>
+                <span class="pull-left">
+                    Total: @Model.Itens.Count() @(Model.Itens.Count()<2? "Item":"Itens")
+                </span>
             </div>
             <div class="col-md-2">
-                <span class="pull-right">R$140,00</span>
+                <span class="pull-right">
+                    Total: R$ @Model.Total
+                </span>
             </div>
         </div>
     </div>
